--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -14,10 +14,9 @@
   </ion-header>
 
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
-
-    <ion-fab-button>
+    <ion-fab-button (click)="addPhotoToGallery()">
       <ion-icon name="camera"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-  
+
 </ion-content>
